# ch-personal-aws-infrastructure

./: .gitignore  README.md
aws_terraform/core_infra/: README.md  rds.tf  vpc.tf
aws_terraform/remote_state/: main.tf
demo/demo/: demo_stack.py
iac_chapter2/: app.py  cdk.json  pyproject.toml
iac_chapter2/cdk.out/: MyStack.assets.json  MyStack.template.json  manifest.json  tree.json
iac_chapter2/src/: cdk_stack.py
snowflake/: providers.tf  variables.tf
stack/: app.py
stack/stack/: stack_stack.py
stack/tests/unit/: test_stack_stack.py
terraform/: README.md
