[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["GabrielSGoncalves <gabrielgoncalvesbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.130.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
